# scholar_scraper

./: .gitignore  LICENSE  README.md  cli.py  commands.py  papers.csv  pyproject.toml  requirements.txt  scraper.py
scholar_scraper/: cli.py  main.py  papers.csv  papers.txt  scraper.py
