[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar_scraper"
version = "0.2.1"
description = "A CLI application that scrapes Google Scholar according to a set of keywords and rates papers."
readme = "README.md"
authors = [{name = "Daniele Di Bella", email = "daniele.dibella99@gmail.com"}]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
scholar_scraper = "scholar_scraper.main:cli"